--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine-ts --config=jasmine.json",
+    "testWithCoverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts --config=jasmine.json && nyc report",
     "start": "npm run build:live",
     "start-tsunamy": "npm run build:live:dev:tsunamy",
     "build": "tsc -p .",
@@ -21,12 +22,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jasmine": "^3.3.12",
     "@types/node": "^11.11.6",
+    "jasmine": "^3.3.1",
+    "jasmine-ts": "^0.3.0",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
-    "tsunamy": "0.0.1"
+    "tsunamy": "^0.0.3"
   }
 }
