--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/apokalupsis"
+  },
   "devDependencies": {
     "@types/jasmine": "^3.3.12",
-    "@types/node": "^11.11.6",
+    "@types/node": "^11.13.0",
     "jasmine": "^3.3.1",
     "jasmine-ts": "^0.3.0",
     "nodemon": "^1.18.10",
     "ts-node": "^8.0.3",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.1"
   },
   "dependencies": {
-    "tsunamy": "^0.0.3"
+    "tsunamy": "0.0.4"
   }
 }
